--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="600dp">
 
 
     <ImageView android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <TextView android:id="@+id/titleView"
+    <TextView
+        android:id="@+id/titleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="bottom"
-        android:textColor="#FFFFFF"
+        android:gravity="bottom|right"
+        android:textColor="@color/white"
         android:textSize="25dp"
-        android:textStyle="bold"
-
-        />
+        android:textStyle="bold" />
 </FrameLayout>
